--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client/shoppingCartStateManagementProd && ng build --prod && cd .. && cd .. && node app.js"
+    "build": "cd client && ng build"
   },
   "author": "",
   "license": "ISC",
